--- a/KolibriScript/Content/bootstrap.css
+++ b/KolibriScript/Content/bootstrap.css
@@ -1288,6 +1288,7 @@ h6,
 }
 p {
   margin: 0 0 10px;
+    height: 426px;
 }
 .lead {
   margin-bottom: 20px;
@@ -1586,6 +1587,7 @@ pre code {
   padding-left: 15px;
   margin-right: auto;
   margin-left: auto;
+    height: 1px;
 }
 @media (min-width: 768px) {
   .container {
@@ -4252,8 +4254,8 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 .navbar-fixed-top,
 .navbar-fixed-bottom {
   position: fixed;
-  right: 0;
-  left: 0;
+  right: -4px;
+  left: -2px;
   z-index: 1030;
 }
 @media (min-width: 768px) {
@@ -4263,7 +4265,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   }
 }
 .navbar-fixed-top {
-  top: 0;
+  top: 4px;
   border-width: 0 0 1px;
 }
 .navbar-fixed-bottom {
@@ -4273,7 +4275,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 }
 .navbar-brand {
   float: left;
-  height: 50px;
+  height: 13px;
   padding: 15px 15px;
   font-size: 18px;
   line-height: 20px;
@@ -4591,9 +4593,11 @@ fieldset[disabled] .navbar-default .btn-link:focus {
 .navbar-inverse {
   background-color: #222;
   border-color: #080808;
+    height: 46px;
 }
 .navbar-inverse .navbar-brand {
   color: #9d9d9d;
+    width: 165px;
 }
 .navbar-inverse .navbar-brand:hover,
 .navbar-inverse .navbar-brand:focus {
